fix(ui): adjust paddings and improve text readability

--- a/chrome/events_page/events.css
+++ b/chrome/events_page/events.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   font-family: var(--font-family-second);
   font-size: 16px;
-  color: var(--color-white-80);
+  color: var(--color-white);
 
   background: url("/assets/icons/bg-stars.svg") repeat,
     linear-gradient(
@@ -16,6 +16,7 @@ body {
       0 0 / auto no-repeat;
 
   background-color: var(--background-dark);
+  backdrop-filter: blur(1px);
   min-height: 100vh;
 }
 
@@ -26,7 +27,7 @@ body {
 }
 
 .section {
-  padding: 40px 0;
+  padding: 30px 0;
 }
 
 .title {
@@ -36,7 +37,6 @@ body {
 
 /** HEADER **/
 .section-header {
-  padding-bottom: 50px;
   position: relative;
   border-bottom: 1px solid var(--container-overlay-dark);
   background-color: var(--shadow-glow-light);
@@ -63,7 +63,7 @@ body {
 #importButton {
   display: inline-block;
   font-family: var(--font-family);
-  color: white;
+  color: var(--color-white);
   font-size: 16px;
   padding: 10px 15px;
   background: linear-gradient(
@@ -91,7 +91,7 @@ body {
 #importButton:disabled,
 #importButton[disabled] {
   background: var(--color-grey);
-  color: var(--color-white-80);
+  color: var(--color-white);
   opacity: 0.6;
   cursor: not-allowed;
 
@@ -103,7 +103,7 @@ body {
   display: inline-block;
   font-family: var(--font-family-second);
   font-weight: 500;
-  color: var(--color-white-80);
+  color: var(--color-white);
   padding: 10px 15px;
   border: 1px solid var(--color-grey);
   background-color: transparent;
@@ -116,7 +116,7 @@ body {
   background-color: transparent;
   padding: 3px;
   font-size: 14px;
-  color: var(--color-white-80);
+  color: var(--color-white);
   font-family: var(--font-family-second);
 }
 
@@ -124,7 +124,7 @@ body {
   display: inline-block;
   font-family: var(--font-family-second);
   font-weight: 500;
-  color: var(--color-white-80);
+  color: var(--color-white);
   padding: 10px 15px;
   border: 1px solid var(--color-grey);
   background-color: transparent;
@@ -136,12 +136,12 @@ body {
 #importFileInput::file-selector-button:hover {
   background-color: var(--background-accent);
   border-color: var(--background-accent);
-  color: white;
+  color: var(--color-white);
 }
 
 /** STATS **/
-.top-score-container {
-  padding-top: 30px;
+.section-top-score {
+  padding-top: 60px;
 }
 
 .top-score-content {
@@ -172,20 +172,13 @@ body {
   display: block;
   margin-bottom: 8px;
   font-size: 15px;
-  opacity: 0.8;
-
-  transition: opacity 0.3s ease;
-}
-
-.statsFilter:hover > span {
-  opacity: 1;
 }
 
 #statsFilters select {
   width: 100%;
   padding: 10px 15px;
   background-color: var(--container-overlay-dark);
-  color: var(--color-white-80);
+  color: var(--color-white);
   border: 1px solid var(--color-grey);
   outline: none;
   border-radius: 20px;
@@ -205,7 +198,7 @@ body {
 }
 
 #statsFilters .statsFilter:hover > select {
-  border-color: var(--color-white-80);
+  border-color: var(--color-white);
 }
 
 option {
@@ -238,7 +231,7 @@ option:checked {
 
 #statsFilters input[type="checkbox"]:checked::after {
   content: "";
-  background-color: var(--color-white-80);
+  background-color: var(--color-white);
 
   mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3e%3cpath d='M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z'/%3e%3c/svg%3e");
   mask-size: 100% 100%;
@@ -264,7 +257,7 @@ option:checked {
   width: 20%;
 
   background-color: var(--container-overlay-dark);
-  color: var(--color-white-80);
+  color: var(--color-white);
   border: 1px solid var(--color-grey);
   outline: none;
   border-radius: 20px;
@@ -296,7 +289,7 @@ option:checked {
   border-left: 3px solid var(--dark-green-default);
   font-family: var(--font-family-second);
   font-size: 16px;
-  color: var(--color-white-80);
+  color: var(--color-white);
 
   counter-increment: score-counter;
   display: flex;
@@ -354,7 +347,7 @@ textarea {
   resize: vertical;
 
   background-color: transparent;
-  color: var(--color-white-80);
+  color: var(--color-white);
   border: none;
   outline: none;
 
