--- a/chrome/styles/variables.css
+++ b/chrome/styles/variables.css
@@ -4,6 +4,7 @@
 
   --color-grey: #898989;
   --color-white-80: rgba(237, 237, 237, 0.8);
+  --color-white: rgb(237, 237, 237);
   --background-dark: #1a1a2e;
   --background-accent: #0f5cad;
   --light-blue: #2e85e1;
